# ebike

./: .gitignore  .gitmodules  README.md  sdkconfig
components/app/: CMakeLists.txt  Kconfig.projbuild  PPS.c  PPS.h  adc.c  adc.h  ahtxx.c  ahtxx.h  event.c  event.h  gps_log.c  gps_log.h  gps_task.c  gps_task.h  gui_task.c  gui_task.h  include.h  update.c  update.h
components/lv_app/: CMakeLists.txt  ui.c  ui.h  ui_img_1_png.c  ui_img_bt24_png.c  ui_img_bt24_w_png.c  ui_img_direction_png.c  ui_img_direction_w_png.c  ui_img_located_png.c  ui_img_locating_png.c  ui_img_p_png.c  ui_img_record_idle_png.c  ui_img_recording_png.c  ui_img_sdcard_png.c  ui_img_sdcard_w_png.c
main/: main.c
squareline_ui_proj/lv_proj/: SquareLine_Project.sll  SquareLine_Project.spj
